תיקון כפתורי + בתת קטגוריה

--- a/Client/Components/CategoryComponent.razor
+++ b/Client/Components/CategoryComponent.razor
@@ -74,7 +74,9 @@
                                 <div class="subCatLine">
                                 </div>
                             </div>
-                            <div class="btn-icon"><img src="../css/images/+.svg" /></div>
+                            <div class="outerPlusBtn">
+                                <div class="btn-icon"><img src="../css/images/+.svg" /></div>
+                            </div>
                         </div>
                     </button>
                 }
@@ -88,7 +90,9 @@
                                 <div class="subCatLine">
                                 </div>
                             </div>
-                            <div class="btn-icon"><img src="../css/images/+.svg" /></div>
+                            <div class="outerPlusBtn">
+                                <div class="btn-icon"><img src="../css/images/+.svg" /></div>
+                            </div>
                         </div>
                     </button>
                 }
