--- a/Client/Components/CategoryComponent.razor.css
+++ b/Client/Components/CategoryComponent.razor.css
@@ -202,7 +202,7 @@
     width: 8.5625rem;
     height: 0.1vh;
     background-color: #D6D9F1;
-    margin-bottom: 4vh;
+
 }
 
 
@@ -566,4 +566,12 @@
     font-weight: 600;
     justify-content: space-between;
     box-shadow: 0px 4px 6px rgba(255, 0, 0, 0.1), 0px 6px 8px rgba(255, 0, 0, 0), 0px 8px 10px rgba(255, 0, 0, 0), 0px 10px 20px rgba(255, 0, 0, 0);
+}
+
+.outerPlusBtn {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 0.6rem;
 }
